enterprise/operator/pkg/lb/testdata/lbfrontend_translation/04-https/input-lbfrontend.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBFrontend
metadata:
  namespace: default
  name: lb-1
spec:
  routes:
    - https:
        hostNames:
          - "foo.acme.io"
        backend: lb-1
    - https:
        hostNames:
          - "bar.acme.io"
        backend: lb-1
  port: 80
  vip: 100.64.0.100
  tls:
    certificates:
      - secretName: "test"
