enterprise/operator/pkg/lb/testdata/lbfrontend_translation/04-https/output-t2-ciliumenvoyconfig.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  namespace: default
  name: lbfe-lb-1
spec:
  nodeSelector:
    matchLabels:
      lb.cilium.io/tier: t2
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      address:
        socketAddress:
          address: 100.64.0.100
          portValue: 80
      filterChains:
        - filterChainMatch:
            transportProtocol: raw_buffer
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                accessLog:
                  - name: stdout
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      logFormat:
                        textFormatSource:
                          inlineString: "\n"
                httpFilters:
                  - name: envoy.filters.http.health_check
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      clusterMinHealthyPercentages:
                        backend_cluster_https_0:
                          value: 20
                        backend_cluster_https_1:
                          value: 20
                      headers:
                        - name: :path
                          stringMatch:
                            exact: /health
                        - name: :method
                          stringMatch:
                            exact: GET
                        - name: user-agent
                          stringMatch:
                            prefix: cilium-probe/
                      passThroughMode: false
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                rds:
                  routeConfigName: frontend_routeconfig_http
                statPrefix: frontend_listener_http
        - filterChainMatch:
            serverNames:
              - bar.acme.io
              - foo.acme.io
            transportProtocol: tls
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                accessLog:
                  - name: stdout
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      logFormat:
                        textFormatSource:
                          inlineString: "\n"
                httpFilters:
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                rds:
                  routeConfigName: frontend_routeconfig_https
                statPrefix: frontend_listener_https
          transportSocket:
            name: envoy.transport_sockets.tls
            typedConfig:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              commonTlsContext:
                tlsCertificateSdsSecretConfigs:
                  - name: /default-test
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - name: cilium.bpf_metadata
          typedConfig:
            "@type": type.googleapis.com/cilium.BpfMetadata
      name: frontend_listener
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: frontend_routeconfig_http
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: frontend_routeconfig_https
      virtualHosts:
        - domains:
            - "foo.acme.io:80"
          name: frontend_virtualhost_https_0
          routes:
            - match:
                prefix: /
              route:
                cluster: backend_cluster_https_0
        - domains:
            - "bar.acme.io:80"
          name: frontend_virtualhost_https_1
          routes:
            - match:
                path: /api/test
              route:
                cluster: backend_cluster_https_1
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            host: lb
            path: /healthz
          interval: 30s
          timeout: 5s
          unhealthyEdgeInterval: 30s
          unhealthyInterval: 30s
          unhealthyThreshold: 1
      loadAssignment:
        clusterName: backend_cluster_https_0
        endpoints:
          - lbEndpoints:
              - endpoint:
                  address:
                    socketAddress:
                      address: 172.18.0.5
                      portValue: 8080
              - endpoint:
                  address:
                    socketAddress:
                      address: 172.18.0.6
                      portValue: 8080
      name: backend_cluster_https_0
      type: STATIC
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            host: lb
            path: /healthz
          interval: 30s
          timeout: 5s
          unhealthyEdgeInterval: 30s
          unhealthyInterval: 30s
          unhealthyThreshold: 1
      loadAssignment:
        clusterName: backend_cluster_https_1
        endpoints:
          - lbEndpoints:
              - endpoint:
                  address:
                    socketAddress:
                      address: 172.18.0.7
                      portValue: 8080
              - endpoint:
                  address:
                    socketAddress:
                      address: 172.18.0.8
                      portValue: 8080
      name: backend_cluster_https_1
      type: STATIC
